# CustomerPrintClient

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
Deploy/: BuildInstaller.bat  Bundle.wxs.template  CMakeLists.txt  Product.wxs.template
Deploy/Prerequisites/: Microsoft_VC142_CRT_x86.msm
Deploy/res/: License.rtf  WixBootstrapperTheme.xml  WixUI_CustomFeatureTree.wxs
src/Core/: BinaryVersion.cpp  BinaryVersion.h  CMakeLists.txt  Config.cpp  Config.h  CredentialsCache.cpp  CredentialsCache.h  Crypto.h  Crypto_Linux.cpp  Crypto_Windows.cpp  Format.cpp  Format.h  GoogleApiKey.h  Log.h  Log_Windows.cpp  OS.h  OS_Linux.cpp  OS_Windows.cpp  StringUtilities.cpp  StringUtilities.h  jsonxx.cc  jsonxx.h
src/CustomerPrintClientCore/: AsyncResultGeneric.h  CMakeLists.txt  CloudPrintClient.cpp  CloudPrintClient.h  ConvertPrintProfile.cpp  ConvertPrintProfile.h  CoreManager.cpp  CoreManager.h  IAsyncResult.h  ILoginManager.h  JobContentType.h  JobProcessor.cpp  JobProcessor.h  PendingJobProgressCallback.h  PrintJobInfo.cpp  PrintJobInfo.h  PrintOffice.cpp  PrintOffice.h  PrintProfile.cpp  PrintProfile.h  TitledException.cpp  TitledException.h  Types.h  UpdateClient.cpp  UpdateClient.h  UserInfo.h
src/CustomerPrintClientGui/: AsyncResultQueue.cpp  AsyncResultQueue.h  CMakeLists.txt  CtrlWithToolBar.cpp  CtrlWithToolBar.h  DlgLogin.cpp  DlgLogin.h  Gui.rc  MainWindow.cpp  MainWindow.h  StringResources.cpp  StringResources.h  Version.h  Version.rc.template  main.cpp  wxUtilities.cpp  wxUtilities.h
src/CustomerPrintClientGui/JobsPage/: CtrlJobDetails.cpp  CtrlJobDetails.h  CtrlPendingJob.cpp  CtrlPendingJob.h  DlgJobCard.cpp  DlgJobCard.h  IJobListItemCallback.h  PageJobsList.cpp  PageJobsList.h  Styles.cpp  Styles.h
src/CustomerPrintClientGui/MapPage/: CtrlRating.cpp  CtrlRating.h  DlgOfficeCard.cpp  DlgOfficeCard.h  MapView.cpp  MapView.h
src/CustomerPrintClientGui/PrintPage/: CtrlCloseHeader.cpp  CtrlCloseHeader.h  CtrlPageAlignPopup.cpp  CtrlPageAlignPopup.h  CtrlPrintPreviewCanvas.cpp  CtrlPrintPreviewCanvas.h  CtrlPrintProfiles.cpp  CtrlPrintProfiles.h  PagePrintContent.cpp  PagePrintContent.h  PanelBrowseFile.cpp  PanelBrowseFile.h  PanelPrintPreview.cpp  PanelPrintPreview.h
src/Networking/: CMakeLists.txt  StringResources.cpp  StringResources.h
src/Networking/Http/: HttpClient.cpp  HttpClient.h  HttpClientMT.cpp  HttpClientMT.h  HttpContent.cpp  HttpContent.h  HttpDefinitions.cpp  HttpDefinitions.h  HttpException.cpp  HttpException.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  TcpException.cpp  TcpException.h
src/Printing/: CMakeLists.txt  GdiplusUtilities.cpp  GdiplusUtilities.h  HBitmapPtr.cpp  HBitmapPtr.h  IDocumentRenderer.h  IPreviewRenderer.h  ImageBundleRenderer.cpp  ImageBundleRenderer.h  ImageFormat.cpp  ImageFormat.h  PdfDocumentRenderer.cpp  PdfDocumentRenderer.h  Primitives.cpp  Primitives.h  PrintSettings.cpp  PrintSettings.h
src/Printing/Pdf/: IPdfPasswordProvider.h  PdfDocument.cpp  PdfDocument.h  PdfError.cpp  PdfError.h  PdfLibrary.cpp  PdfLibrary.h
src/Resources/: CMakeLists.txt  Resources.h
src/Resources/web/: MapView.html
src/Test/PdfRenderApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  wxUtilities.cpp  wxUtilities.h
src/Test/TestConsole/: CMakeLists.txt  main.cpp
src/Test/TestPrintApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
